# homeassistant-apc-ups

./: .gitignore  .python-version  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
custom_components/: __init__.py
custom_components/apc_ups_snmp/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py  snmp_client.py  strings.json
docs/: HOME_ASSISTANT_TESTING_ENVIRONMENT.md  snmp_explanation.md
scripts/: test_real_ups.py
scripts/ha_test_env/: docker-compose.yml  manage.sh
scripts/ha_test_env/config/: configuration.yaml  home-assistant.log.1
scripts/ha_test_env/config/.storage/: auth  auth_provider.homeassistant  core.area_registry  core.config_entries  core.device_registry  core.entity_registry  core.restore_state  http  http.auth  person  repairs.issue_registry
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_snmp_client.py
